--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.12
+FROM python:3.11
 
 WORKDIR /app
 
@@ -8,5 +8,7 @@ RUN pip install -r requirements.txt
 COPY app/main.py ./
 
 # ENV SERVER_ID #
+# Expose the port the app runs on??
+#EXPOSE 5000
 
 CMD ["python", "main.py"]
